--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,25 @@
 font-family: 'Jost', sans-serif;
 font-family: 'Poppins', sans-serif; */
 
+:root{
+  --black: #171718;
+  --black-border: #171718;
+  --white: #fff;
+  --purple: #5c62ec;
+
+  --dark-bg: var(--black);
+  --dark-border: var(--black-border);
+  --header-text: var(--white);
+  --accent: var(--purple);
+}
+
 html, body{ 
   font-family: 'DM Sans';
 }
 
-*{
+/* *{
   border: 1px solid red;
-}
+} */
 
 .container{
   margin: 0 auto;
@@ -23,9 +35,9 @@ html, body{
 
 .nav{
   padding: 20px 0;
-  border-bottom: 1px solid #262920;
-  background-color: #171718;
-  color: #fff;
+  border-bottom: 1px solid var(--dark-border);
+  background-color: var(--dark-bg);
+  color: var(--header-text);
 }
 
 .nav-row{
@@ -38,7 +50,7 @@ html, body{
 }
 
 .logo{
-  color:#fff;
+  color: var(--header-text);
   font-size: 24px;
   font-family: 'Poppins', sans-serif;
 }
@@ -47,3 +59,32 @@ html, body{
   font-weight: 700;
 }
 
+.nav-list{
+  display: flex;
+  align-items: center;
+  column-gap: 40px;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: 'Poppins', sans-serif;
+}
+
+.nav-list__link{
+  color: var(--header-text);
+}
+
+.nav-list__link--activ{
+  position: relative;
+}
+
+.nav-list__link--activ::before{
+  content: '';
+
+  position: absolute;
+  left: 0;
+  top: 100%;
+
+  display: block;
+  height: 2px;
+  width: 100%;
+  background-color: var(--accent);
+}
