--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,11 @@ font-family: 'Poppins', sans-serif; */
 
 :root{
   --black: #171718;
-  --black-border: #171718;
+  --black-border: #26292d;
   --white: #fff;
   --purple: #5c62ec;
 
+  --text-color: var(--black);
   --dark-bg: var(--black);
   --dark-border: var(--black-border);
   --header-text: var(--white);
@@ -19,6 +20,8 @@ font-family: 'Poppins', sans-serif; */
 
 html, body{ 
   font-family: 'DM Sans';
+  letter-spacing: -0.5px;
+  color: var(--text-color);
 }
 
 /* *{
@@ -38,6 +41,7 @@ html, body{
   border-bottom: 1px solid var(--dark-border);
   background-color: var(--dark-bg);
   color: var(--header-text);
+  letter-spacing: normal;
 }
 
 .nav-row{
@@ -88,3 +92,81 @@ html, body{
   width: 100%;
   background-color: var(--accent);
 }
+
+/* header */
+
+.header{ 
+  padding: 40px 0;
+  min-height: 695px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: var(--dark-bg);
+  background-image: url('./../img/header-bg.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: center;
+
+  color: var(--header-text);
+  text-align: center;
+}
+
+.header__wrapper{
+  padding: 0 15px;
+  min-width: 660px;
+}
+
+.header__title{
+  margin-bottom: 20px;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.4;
+}
+
+.header__title strong{
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.header__title em{
+  font-style: normal;
+  color: var(--accent);
+}
+
+.header__text{
+  margin-bottom: 40px;
+  font-size: 18px;
+  line-height: 1.333;
+}
+
+.header__text p+p{
+  margin-top: 1em;
+}
+
+.btn{
+  display: inline-block;
+  height: 48px;
+  padding: 12px 28px;
+
+  border-radius: 5px;
+  background-color: var(--accent);
+  color: var(--white);
+
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.15px;
+
+  transition: opacity 0.2s ease-in;
+}
+
+.btn:hover{
+  opacity: 0.8;
+}
+
+.btn:active{
+  position: relative;
+  top: 1px;
+}
+
